--- a/react/changing-themes-with-context/package.json
+++ b/react/changing-themes-with-context/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "seinfeld-project1",
+  "name": "changing-themes-with-context",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-router-dom": "^5.1.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
